[tool.poetry]
name = "pyhypergeomatrix"
version = "0.1.0"
description = "Hypergeometric functions of a matrix argument."
homepage = "https://github.com/stla/pyhypergeomatrix"
authors = ["Stéphane Laurent <laurent_step@outlook.fr>"]
documentation = "https://pyhypergeomatrix.readthedocs.io/en/latest/"
keywords = ["mathematics", "special functions"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
sphinx = { version = "^7.2.0", optional = true }
sphinx-rtd-theme = { version = "^1.3.0", optional = true }
sphinxcontrib-napoleon = { version = "^0.7", optional = true }
sphinxcontrib-restbuilder = { version = "^0.3", optional = true }

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon", "sphinxcontrib-restbuilder"]

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
